2007-06-18  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* ChangeLog: Added a Changelog for the utils library.
